<resources>
    <string name="app_name">Shipping Calculator</string>
    <string name="weight_of_package_banner">Weight of the Package</string>
    <string name="in_ounces">(in ounces)</string>
    <string name="base_cost_text_view">Base Cost:</string>
    <string name="added_cost_text_view">Added Cost:</string>
    <string name="total_shipping_cost_text_view">Total Shipping Cost:</string>

</resources>
